2003-02-27  Peter Stephenson  <pws@csr.com>

	* 18313: Src/Zle/zle_misc.c: After a single yank (hence
	no kill ring), yank-pop	did unpleasant things with a NULL pointer.

2003-02-27  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Command/_tar: correct my typo

2003-02-27  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18305: Completion/Unix/Command/_python: new completion for
	python.

2003-02-27  Geoff Wing  <gcw@zsh.org>

	* 18306: Src/Zle/zle_refresh.c: fix redisplay of rprompt when line
	shortens

2003-02-26  Clint Adams  <clint@zsh.org>

	* 18303: zshconfig.ac: fix some always-true test evaluations.

2003-02-26  Oliver Kiddle  <opk@zsh.org>

	* 18299: Completion/Base/Core/_main_complete,
	Completion/Base/Core/_all_labels, Completion/Base/Core/_next_label,
	Completion/Base/Widget/_next_tags: allow _next_tags to work with
	nested tag loops

	* 18300: Completion/Unix/Command/_tar,
	Completion/Unix/Type/_tar_archive: handle tar's -C option better

2003-02-26  Peter Stephenson  <pws@csr.com>

	* unposted: whoops, left some debugging code in 18230.

2003-02-25  Oliver Kiddle  <opk@zsh.org>

	* 18296: Completion/Base/Widget/_next_tags: fake _all_labels and
	_next_label functions were out of sync with changes to the real ones

	* unposted: Completion/Zsh/Context/_value, Doc/Zsh/compsys.yo:
	fix out of date documentation and move description of special
	contexts from _complete's to #compdef's description

2003-02-24  Peter Stephenson  <pws@csr.com>

	* 18230: Completion/Unix/Type/_path_files: If globbing failed
	to match a path entry, test to see if [[ -e <file> ]] worked
	anyway.  This supports smart filing systems (cygdrive, ClearCase
	dynamic views) and may work for automounted directories (so
	commented out the other hack to see).

2003-02-23  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 18278: Functions/TCP/tcp_output, Functions/TCP/tcp_spam,
	Functions/TCP/zgprintf, Doc/Zsh/tcpsys.yo: zgprintf is already